--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
           <h2 class="priority-headline headline" hidden>Priorities</h2>
           <ul class="priority-list list">
             <li class="priority-item">
+              <svg class="priority-icon">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="priority-title title">Strategy</h3>
               <p class="priority-text text">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +80,9 @@
               </p>
             </li>
             <li class="priority-item">
+              <svg class="priority-icon">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="priority-title title">Punctuality</h3>
               <p class="priority-text text">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +90,9 @@
               </p>
             </li>
             <li class="priority-item">
+              <svg class="priority-icon">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="priority-title title">Diligence</h3>
               <p class="priority-text text">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +100,9 @@
               </p>
             </li>
             <li class="priority-item">
+              <svg class="priority-icon">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="priority-title title">Technologies</h3>
               <p class="priority-text text">
                 Design practice focused on digital experiences. We bring forth a
