--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
           <h2 class="priority-headline headline" hidden>Priorities</h2>
           <ul class="priority-list list">
             <li class="priority-item">
-              <svg class="priority-icon">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="icon-wrapper">
+                <svg class="priority-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="priority-title title">Strategy</h3>
               <p class="priority-text text">
                 Our goal is to identify the business problem to walk away with
@@ -80,9 +82,11 @@
               </p>
             </li>
             <li class="priority-item">
-              <svg class="priority-icon">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="icon-wrapper">
+                <svg class="priority-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="priority-title title">Punctuality</h3>
               <p class="priority-text text">
                 Bring the key message to the brand's audience for the best price
@@ -90,9 +94,11 @@
               </p>
             </li>
             <li class="priority-item">
-              <svg class="priority-icon">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="icon-wrapper">
+                <svg class="priority-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="priority-title title">Diligence</h3>
               <p class="priority-text text">
                 Research and confirm brands that present the strongest digital
@@ -100,9 +106,11 @@
               </p>
             </li>
             <li class="priority-item">
-              <svg class="priority-icon">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="icon-wrapper">
+                <svg class="priority-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="priority-title title">Technologies</h3>
               <p class="priority-text text">
                 Design practice focused on digital experiences. We bring forth a
