updated styles.css; created new section in index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -227,13 +227,68 @@
     <div class="footer-wrapper">
       <div class="footer-container container">
         <footer class="footer-section">
-          <a class="logo-link link" href="./index.html">
-            Web<span class="footer-logo">Studio</span></a
-          >
-          <p class="logo-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+          <div class="logo-side">
+            <a class="logo-link footer-link link" href="./index.html">
+              Web<span class="footer-logo">Studio</span></a
+            >
+            <p class="logo-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media">
+            <p class="footer-text text">Social media</p>
+            <ul class="socials-list footer-list list">
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.instagram.com/"
+                  rel="noopener noreferer"
+                  aria-label="instagram"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://twitter.com/"
+                  rel="noopener noreferer"
+                  aria-label="twitter"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.facebook.com/"
+                  rel="noopener noreferer"
+                  aria-label="facebook"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.linkedin.com/"
+                  rel="noopener noreferer"
+                  aria-label="linkedin"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </footer>
       </div>
     </div>
