--- a/index.html
+++ b/index.html
@@ -172,6 +172,56 @@
                 <div class="card-content">
                   <h3 class="team-title title">Mark Guerrero</h3>
                   <p class="team-text text">Product Designer</p>
+                  <ul class="socials-list list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.instagram.com/"
+                        rel="noopener noreferer"
+                        aria-label="instagram"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://twitter.com/"
+                        rel="noopener noreferer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.facebook.com/"
+                        rel="noopener noreferer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.linkedin.com/"
+                        rel="noopener noreferer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -185,6 +235,56 @@
                 <div class="card-content">
                   <h3 class="team-title title">Tom Ford</h3>
                   <p class="team-text text">Frontend Developer</p>
+                  <ul class="socials-list list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.instagram.com/"
+                        rel="noopener noreferer"
+                        aria-label="instagram"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://twitter.com/"
+                        rel="noopener noreferer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.facebook.com/"
+                        rel="noopener noreferer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.linkedin.com/"
+                        rel="noopener noreferer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -198,6 +298,56 @@
                 <div class="card-content">
                   <h3 class="team-title title">Camila Garcia</h3>
                   <p class="team-text text">Marketing</p>
+                  <ul class="socials-list list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.instagram.com/"
+                        rel="noopener noreferer"
+                        aria-label="instagram"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://twitter.com/"
+                        rel="noopener noreferer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.facebook.com/"
+                        rel="noopener noreferer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.linkedin.com/"
+                        rel="noopener noreferer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -211,24 +361,209 @@
                 <div class="card-content">
                   <h3 class="team-title title">Daniel Wilson</h3>
                   <p class="team-text text">UI Designer</p>
+                  <ul class="socials-list list">
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.instagram.com/"
+                        rel="noopener noreferer"
+                        aria-label="instagram"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://twitter.com/"
+                        rel="noopener noreferer"
+                        aria-label="twitter"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.facebook.com/"
+                        rel="noopener noreferer"
+                        aria-label="facebook"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="socials-item">
+                      <a
+                        class="socials-link link"
+                        href="https://www.linkedin.com/"
+                        rel="noopener noreferer"
+                        aria-label="linkedin"
+                      >
+                        <svg class="socials-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
           </section>
         </div>
       </div>
+      <!-- Customers -->
+      <div class="customers-container container">
+        <section class="customers-section section">
+          <h2 class="customers-title title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a
+                class="customers-link link"
+                href=""
+                rel="noopener noreferer"
+                aria-label=""
+              >
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!--Footer-->
     <div class="footer-wrapper">
       <div class="footer-container container">
         <footer class="footer-section">
-          <a class="logo-link link" href="./index.html">
-            Web<span class="footer-logo">Studio</span></a
-          >
-          <p class="logo-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+          <div class="logo-side">
+            <a class="logo-link footer-link link" href="./index.html">
+              Web<span class="footer-logo">Studio</span></a
+            >
+            <p class="logo-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media">
+            <p class="footer-text text">Social media</p>
+            <ul class="socials-list footer-list list">
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.instagram.com/"
+                  rel="noopener noreferer"
+                  aria-label="instagram"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://twitter.com/"
+                  rel="noopener noreferer"
+                  aria-label="twitter"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.facebook.com/"
+                  rel="noopener noreferer"
+                  aria-label="facebook"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a
+                  class="socials-link link"
+                  href="https://www.linkedin.com/"
+                  rel="noopener noreferer"
+                  aria-label="linkedin"
+                >
+                  <svg class="socials-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </footer>
       </div>
     </div>
